--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="language" content="spanish">
+    <meta name="copyright" content="Diseño Web">
+    <meta name="author" content="Cristhian Loayza">
+    <meta name="audience" content="all">
+    <meta name="keywords" content="tecnología,finanzas,créditos,ahorros,emprendedores,banca">
+    <meta name="category" content="seguros, cuentas,préstamos, productos bancarios, fondos mutuos">
+    <meta itemprop="telephone" content="964254852">
+
     <title>BBVA | Perú </title>
     <link rel="stylesheet" type="text/css" href="css/estilobbva.css">
     <link rel="shortcut icon" href="imagen/bbva-icon.webp">
